[gd_scene load_steps=28 format=1]

[ext_resource path="res://scripts/tela2.gd" type="Script" id=1]
[ext_resource path="res://img/menu_itens/tela_nivel.png" type="Texture" id=2]
[ext_resource path="res://img/menu_itens/normal_amarelo.png" type="Texture" id=3]
[ext_resource path="res://img/menu_itens/normal_vermelho.png" type="Texture" id=4]
[ext_resource path="res://img/menu_itens/normal_azul.png" type="Texture" id=5]
[ext_resource path="res://img/menu_itens/dificil_amarelol.png" type="Texture" id=6]
[ext_resource path="res://img/menu_itens/dificil_vermelho.png" type="Texture" id=7]
[ext_resource path="res://img/menu_itens/dificil_azull.png" type="Texture" id=8]
[ext_resource path="res://img/menu_itens/voltar_amarelo.png" type="Texture" id=9]
[ext_resource path="res://img/menu_itens/voltar_vermelho.png" type="Texture" id=10]
[ext_resource path="res://img/menu_itens/voltar_azul.png" type="Texture" id=11]
[ext_resource path="res://img/personagens/timy_aviao.tex" type="Texture" id=12]
[ext_resource path="res://img/personagens/tela2/boy_body_1.tex" type="Texture" id=13]
[ext_resource path="res://img/personagens/tela2/boy_body_2.tex" type="Texture" id=14]
[ext_resource path="res://img/personagens/tela2/boy_body_3.tex" type="Texture" id=15]
[ext_resource path="res://img/personagens/tela2/boy_body_4.tex" type="Texture" id=16]
[ext_resource path="res://img/personagens/tela2/boy_body_5.tex" type="Texture" id=17]
[ext_resource path="res://img/personagens/tela2/boy_body_6.tex" type="Texture" id=18]
[ext_resource path="res://img/personagens/tela2/boy_body_7.tex" type="Texture" id=19]
[ext_resource path="res://img/personagens/tela2.tres" type="Animation" id=20]
[ext_resource path="res://scripts/anima.gd" type="Script" id=21]
[ext_resource path="res://sons/sndfx/Airplanes/airplane.ogg" type="AudioStream" id=22]

[sub_resource type="GDScript" id=1]

script/source = "
extends Node2D

# member variables here, example:
# var a=2
# var b=\"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	#set.set_process(true)
	set_process(true)
	get_node(\"garoto\")

func _process(delta):
	
	pass


"

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=3]

script/source = "
extends AnimatedSprite

# member variables here, example:
# var a=2
# var b=\"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	set_process(true)
	pass
func _process(delta):
	
	pass

"

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=5]

script/source = "
extends AnimatedSprite

# member variables here, example:
# var a=2
# var b=\"textvar\"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here

	pass


"

[node name="tela2" type="EventPlayer"]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/pitch_scale = 1.0
stream/tempo_scale = 1.0
stream/autoplay = false
stream/paused = false
script/script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="TextureFrame" type="TextureFrame" parent="ParallaxBackground/ParallaxLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="normal" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 388.0
margin/top = 190.0
margin/right = 632.0
margin/bottom = 254.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="dificil" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 390.0
margin/top = 273.0
margin/right = 634.0
margin/bottom = 337.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="voltar" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 399.0
margin/top = 508.0
margin/right = 643.0
margin/bottom = 572.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/hover = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Node2D" type="Node2D" parent="."]

script/script = SubResource( 1 )

[node name="Aviao" type="AnimatedSprite" parent="Node2D"]

transform/pos = Vector2( 946.728, 517.597 )
transform/rot = -29.9323
transform/scale = Vector2( 0.394435, 0.364409 )
frames = SubResource( 2 )
animation = "default"
script/script = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]

transform/pos = Vector2( 219.87, 423.115 )
transform/rot = 1.51207e-06
transform/scale = Vector2( 1.00718, 1.12928 )
frames = SubResource( 4 )
animation = "default"
script/script = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/garoto = ExtResource( 20 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
script/script = ExtResource( 21 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 22 )
stream/play = false
stream/loop = true
stream/volume_db = -12.0258
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="normal" to="." method="_on_normal_pressed"]

[connection signal="pressed" from="dificil" to="." method="_on_dificil_pressed"]

[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]

[connection signal="animation_started" from="Node2D/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]


